fix: dark mode styles

--- a/src/component/reader/tools/penPanel.sass
+++ b/src/component/reader/tools/penPanel.sass
@@ -80,3 +80,7 @@
   [data-dark=false] .color-select
     label[data-color="#000000"] .circle
       box-shadow: 0 0 0 1px #ddd
+  .ant-segmented-item-selected, .ant-segmented-thumb
+    background-color: #ddd
+  .pen-panel .pen-status .hi-btn[data-checked=true]
+      border: 1px solid $blue-color
